// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List renders with defaultProps 1`] = `
<ul
  className="ax-list ax-space--x4"
>
  <li
    className="ax-list__item"
  >
    Lorem Ipsum
  </li>
</ul>
`;

exports[`List renders with inline 1`] = `
<ul
  className="ax-list ax-list--inline ax-space--x4"
>
  <li
    className="ax-list__item"
  >
    Lorem Ipsum
  </li>
</ul>
`;

exports[`List renders with ordered 1`] = `
<ol
  className="ax-list ax-space--x4"
>
  <li
    className="ax-list__item"
  >
    Lorem Ipsum
  </li>
</ol>
`;
